<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SalarioNeto">

    <TextView
        android:id="@+id/titulo"
        android:text="Salario neto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="34sp"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="0dp"
        android:layout_margin="20dp"
        android:layout_height="46dp"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/Salario_txt_nombre"/>

    <EditText
        android:id="@+id/txt_salario"
        android:layout_width="0dp"
        android:minHeight="46dp"
        android:layout_height="46dp"
        android:ems="10"
        android:layout_margin="20dp"
        app:layout_constraintVertical_bias="0.02"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/Salario_txt_salarioBase"/>

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:text="@string/Salario_btn_calcular"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_salario" />

    <TextView
        android:id="@+id/lbl_neto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintTop_toBottomOf="@id/btn_calcular"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/Salario_lbl_neto"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="460dp"
        android:textSize="20sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>